# SentryAVTT

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: config.rs  main.rs
core/src/db/: mod.rs  scan_history.rs  schema.rs  threats.rs  updater.rs
core/src/ipc/: gen.rs  message.rs  mod.rs  pipe_server.rs  proto.rs
core/src/monitor/: filesystem.rs  process.rs
core/src/quarantine/: mod.rs
core/src/scanner/: hasher.rs  mod.rs  walker.rs
proto/: sentryavtt.proto
ui/SentryAVTT.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SentryAVTT.UI.csproj
ui/SentryAVTT.UI/Converters/: StatusConverters.cs
ui/SentryAVTT.UI/Ipc/: Proto.cs
ui/SentryAVTT.UI/Models/: ScanResult.cs
ui/SentryAVTT.UI/Pages/: AboutPage.xaml  AboutPage.xaml.cs  QuarantinePage.xaml  QuarantinePage.xaml.cs
ui/SentryAVTT.UI/Services/: IpcService.cs  PipeClient.cs  ScanService.cs
ui/SentryAVTT.UI/Styles/: ModernStyles.xaml
ui/SentryAVTT.UI/ViewModels/: AdminConsoleViewModel.cs  DashboardViewModel.cs  QuarantineViewModel.cs
