[package]
name = "sentryavtt-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

notify = "7"
sha2 = "0.10"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

prost = { version = "0.13", features = ["derive"] }
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
ureq = "3"
